--- a/skysub.tex
+++ b/skysub.tex
@@ -263,7 +263,7 @@ Users of fully-processed \iiwione\ \texttt{*p.fits} images do not directly notic
 Yet since pixel gain changes the signal in proportion to incident flux, subtraction is fundamentally the wrong operation to use.
 Our remedy is to adopt night sky flats, which use the median night sky as the illumination reference rather than a dome lamp.
 Comparing the dome and night sky flats, as in \Fig{domeflatratio}, shows how profound the choice of flat field can be.
-Our confidence in night sky flats as the \textit{correct} choice for flat fielding WIRCam lies in their ability to remove both large scale illumination features (\eg \Fig{qrun_median_sky}) and pixel-to-pixel gain changes across WIRCam (\eg \Fig{flattenedimage_comparison}).
+Our confidence in night sky flats as the \textit{correct} choice for flat fielding WIRCam lies in their ability to remove both large scale illumination features (\eg \Fig{median_sky_images}) and pixel-to-pixel gain changes across WIRCam (\eg \Fig{flattenedimage_comparison}).
 But the production of WIRCam sky flats is subtle as we find the flat field structure to be time dependent on sub-hour scales, and of course the NIR night sky itself is not flat.
 A comprehensive discussion of WIRCam flat fielding is made in \Sec{skyflatstability}.
 
@@ -1024,26 +1024,32 @@ The jitter is due to chip-to-chip zeropoint normalization (\Sec{flatbuilding}) u
 
 We can also judge sky flats in their ability to produce an unbiased sky background, up to the level of intrinsic sky variations.
 This test can be made by examining the median sky frames (\Sec{mediansky}) produced by \texttt{QRUN} and \texttt{FW100K} sky flats.
-With \Fig{qrun_median_sky}, we can easily see that \texttt{QRUN} sky flats produced biased sky shapes---evidently caused by changes in the CFHT/WIRCam optical path and electronics over a queue run, rather than intrinsic variations in the sky itself.
+Examples of these median sky images are shown in \Fig{median_sky_images}, where we can easily see that \texttt{QRUN} sky flats produce biased sky shapes---evidently caused by changes in the CFHT/WIRCam optical path and electronics over a queue run, rather than intrinsic variations in the sky itself.
 
-To quantitatively compare the bias of \texttt{QRUN} versus \texttt{FW100K} sky flats, we measure the amplitude of shapes across the $10\arcmin \times 10\arcmin$ WIRCam frame as the 2-standard deviation range of each median sky image's pixel distribution: $2 \sigma(\mathrm{med~sky})$.
+To quantitatively compare the bias of \texttt{QRUN} versus \texttt{FW100K} sky flats, we measure the amplitude of shapes across the $10\arcmin \times 10\arcmin$ WIRCam frame as the 2-standard deviation interval (95\%) of each median sky image's pixel distribution: $2 \sigma(\mathrm{med~sky})$.
 These distributions of sky shape amplitude are plotted in \Fig{mediansky_amplitude}.
-As expected from \Fig{qrun_median_sky}, \texttt{QRUN} median sky frames have typical biases of 1\% of the sky level, while sky frames from real-time \texttt{FW100K} sky flats are much flatter---$\lesssim 0.3\%$ of the sky level---and more consistently so.
+As expected from \Fig{median_sky_images}, \texttt{QRUN} median sky frames have typical biases of 1\% of the sky level, while sky frames from real-time \texttt{FW100K} sky flats are much flatter---$\lesssim 0.3\%$ of the sky level---and more consistently so.
 
 Although \texttt{FW100k} sky flats are better than \texttt{QRUN} flats, we can still ask how accurate they are.
-Are the shapes of median sky frames a consequence of intrinsic sky shapes, or of limits in WIRCam flat field accuracy?
-We interpret \Fig{mediansky_amplitude} as indicating the latter since 2007B and 2009B median sky images have comparable amplitudes.
-Recall that 2009B median sky images are composed of five sky samples taken at random points on the sky, thus potentially sampling uncorrelated sky shapes while the 2007B sky images are composed of sky images taken in rapid succession at the same site on the sky.
-Thus we expect the instantaneous shape of the sky (in the sky field) to be captured in the 2007B median sky frames, while the 2009B sky frames should marginalize over five random sky shapes and be flatter by up to a factor of $1/\sqrt{5}$ (for a Gaussian shape distribution).
-That this \emph{does not} occur indicates either (a) sky shapes are correlated over tens of minutes and 3\arcdeg\ of sky, or (b) the flatness of median sky images is limited at the 0.3\% level by flat field variations in WIRCam (\eg \Fig{fw100k_movie}).
-Indeed, because 2009B median sky images are built over wider time windows than 2007B median sky images (that are built in rapid succession, without target nods interspersed), the intrinsic flat field function of WIRCam can evolve further within 2009B median sky images, offsetting any gains from sampling uncorrelated sky shapes. \todo{Get number for time windows of 2007B and 2009B median sky windows; put in \Sec{mediansky}}.
+% Are the shapes of median sky frames a consequence of intrinsic sky shapes, or of limits in WIRCam flat field accuracy?
+Is the 0.3\% flatness limit of median sky images a consequence of intrinsic sky shapes, or of limits in the WIRCam flat field accuracy?
+% \comment{We interpret \Fig{mediansky_amplitude} as indicating the latter since 2007B and 2009B median sky images have comparable amplitudes. TODO: is the previous statement still true?}
+Recall that median sky images are composed of five sky frames taken closest to a disk frame.
+In the case of 2007B, all sky frames would be sampled from the same coordinate on the sky, but span a 12~minute window covering sky integrations taken before and after a disk image (for both $J$ and $K_s$ sky-target nods).
+In 2009B, sky frames are sampled for randomly chosen sites along the sky field ring (\Fig{fieldmap}) with a window typically spanning 15 minutes.
+Thus both 2007B and 2009B median sky images span similar time windows, but the 2009B strategy attempts to marginalize over five distinct sites  on the sky (and thus shapes shapes) while 2007B median sky images do not.
+If the spatial sky glow pattern and WIRCam flatness function were stationary, we expect the instantaneous shape of the sky (in the sky field) to be captured in the 2007B median sky frames, while the 2009B sky frames should marginalize over five random sky shapes and be flatter by up to a factor of $1/\sqrt{5}$ (for a Gaussian shape distribution).
+That this \emph{does not} occur indicates either (a) sky shapes are correlated over 15~minutes and 3\arcdeg\ of sky, (b) sky glow patterns have sufficient temporal variability to be effectively uncorrelated over windows of 15~minutes across a WIRCam frame so that both observing patterns marginalize over sky shapes equally, or (c) the flatness of median sky images is limited at the 0.3\% level by background variations associated with WIRCam itself over 15~minutes.
+Wide-field movies of the NIR sky \citep{Adams:1996} indicate option (a) to be false.
+From this test alone, then, we cannot distinguish between instrumental background variability or stochasticity in the sky as the cause of the 0.3\% amplitude of sky shapes seen by WIRCam median sky images.
+Further, this test cannot distinguish between proportional instrumental variability in the flat field (\eg \Fig{fw100k_movie}) or additive background variability \citep[as seen in the CFHT-IR camera][]{Vaduvescu:2004}.
 
-Also note that in both cases, there are long-tail cases of median sky shape amplitudes as large as 5\% of the sky level \todo{(figure out the circumstances of these!)}.
-But neglecting this long tail, \Fig{mediansky_amplitude} demonstrates the combined effects of real-time \texttt{FW100K} sky flat fidelity and the intrinsic variations of the NIR sky across a $10\arcmin \times 10\arcmin$.
+\comment{Also note that in both cases, there are long-tail cases of median sky shape amplitudes as large as 5\% of the sky level \todo{(figure out the circumstances of these!)}.
+But neglecting this long tail, \Fig{mediansky_amplitude} demonstrates the combined effects of real-time \texttt{FW100K} sky flat fidelity and the intrinsic variations of the NIR sky across a $10\arcmin \times 10\arcmin$.}
 
 \subsubsection{The function of median sky subtraction}
 
-Although the WIRCam illumination function appears to vary rapidly, and strongly, we do not see extremely strong sky residuals (\ie \Fig{qrun_median_sky}) in the \texttt{QRUN}-calibrated mosaic (ultimately presented in \todo{\S TODO}).
+Although the WIRCam illumination function appears to vary rapidly, and strongly, we do not see extremely strong sky residuals (\ie \Fig{median_sky_images}) in the \texttt{QRUN}-calibrated mosaic (ultimately presented in \todo{\S TODO}).
 This can be attributed to the functionality of median sky subtraction (\Sec{mediansky}).
 Suppose the disk has a flux of $N$ counts, while the sky brightness is $S$ counts, before flat fielding.
 Suppose that both the disk and the paired median sky subtraction image are calibrated with the same flat field, $\mathcal{F}$.
@@ -1053,24 +1059,24 @@ The magnitude difference between the correct and incorrect disk surface brightne
 That is, a 1\% error in the flat field will only perturb the observed disk surface brightness by 0.01~mag.
 So long as the disk and sky are observed with the same flat field function, median sky subtraction will nonetheless subtract, and effectively flatten, the sky background of the disk image.
 
-% TODO: what if biases are different?
+\todo{TODO: Case if biases are different in median sky and target images.}.
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/1129459_1129489_Ks_queuesky_medsky}
-\caption{A typical median sky image from images calibrated by \texttt{QRUN} sky flats.
-Although the median sky images vary,  the axis symmetry and dust patterns are indicative of flat fielding bias.
-As shown, flat-fielding errors impose sky subtraction biases on the order of 1\% of the NIR sky level, which is unacceptable for this M31 survey.
+\includegraphics[width=\columnwidth]{figs/1129459_1129489_Ks_medsky}
+\caption{Comparison of a typical median sky frames in $2\times 2$ WIRCam array in the $K_s$-band from images calibrated with \texttt{QRUN} (left) and \texttt{FW100K} (right) sky flats.
+Amplitudes of shapes in these median sky images are plotted as a fraction of the mean sky brightness.
+While the real-time sky flat produces very flat median sky images, \texttt{QRUN}-calibrated data produce sky biases on the order of 1\% of the NIR sky level.
 }
-\label{fig:qrun_median_sky}
+\label{fig:median_sky_images}
 % made with wircam/shape/median_sky_movie.py
 \end{figure}
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/mediansky_amplitude}
-\caption{Amplitude of sky level variations across median sky images processed with \texttt{QRUN} and \texttt{FW100K} sky flats.
-\comment{Switch to a cumulative distribution to better show scales.}}
+\includegraphics[width=\columnwidth]{figs/mediansky_amplitude_cdf}
+\caption{Cumulative distribution function of sky level amplitudes across median sky images processed with \texttt{QRUN} (black) and \texttt{FW100K} (blue) sky flats for the $J$ (top) and $K_s$ (bottom) bands. Real-time (\texttt{FW100k}) sky flats produce much flatter median sky frames, with expected shape amplitudes of 0.3\% ($J$) to 0.1\% ($K_s$) of the NIR sky level, while the expected amplitude of \texttt{QRUN}-flat processed sky images is 0.5\% of the sky level, and as high as 3\% of the sky level.
+}
 \label{fig:mediansky_amplitude}
 % made with $andpipe/wircam/shape/mediansky_amplitude.py
 \end{figure}
@@ -1079,17 +1085,23 @@ As shown, flat-fielding errors impose sky subtraction biases on the order of 1\%
 \label{sec:frameblockresiduals}
 
 In previous sections, we have shown that real-time \texttt{FW100K} sky flats are preferable over broader-baseline \texttt{QRUN} sky flats since they produce systematically flatter median sky images, and do seem to track real evolution in the WIRCam flat field function on scales of 30 minutes.
-Yet is difficult to measure the absolute accuracy of real-time sky flats since it is hard to distinguish flat fielding bias from sky shape stochasticity.
-Part of this difficulty is that in exclusively observing sky fields the amplitudes of signals due to flat fielding biases or due to sky glow shape stochasticity will be similar.
+Yet it is difficult to measure the absolute accuracy of real-time sky flats since flat field bias cannot be distinguished from additive background stochasticity (from sky or instrument) when simply observing the shape of the sky background.
 But if we examine signal- (not sky-) dominated fields, flat fielding biases should grow in comparison to sky shape biases.
 
-In Figures~\ref{fig:frame_residuals_M31-37_Ks_fw100k_medsky} and~\ref{fig:frame_residuals_M31-37_Ks_QRUN} we show the residual shapes of individual WIRCam frames against the median shape of the mosaic, given \texttt{FW100K} and \texttt{QRUN} sky flattening, respectively.
+Our 2009B observations of field M31-37 in the $K_s$ band are perfect for this experiment: a single detector in that field covers the core of M31, and observations were taken into two blocks, covering a total window of 2~hours.
+Both the high surface brightness and wide time baseline in this field should highlight flat field bias and variation.
+In Figures~\ref{fig:frame_residuals_M31-37_Ks_fw100k_medsky} and~\ref{fig:frame_residuals_M31-37_Ks_QRUN} we show the residual shapes of individual WIRCam frames against the median shape of the mosaic, given \texttt{FW100K} and \texttt{QRUN} sky flattening, respectively, in field M31-37 in the $K_s$ band.
 In detector \#2 (lower-right), where the core of M31 resides, there are strong surface brightness residuals that clearly point out flaws in the flat field itself.
 Using \texttt{FW100K} sky flats (\Fig{frame_residuals_M31-37_Ks_fw100k_medsky}) WIRCam frames at the core of M31 can vary in surface brightness by $\pm 0.5\%$; with \texttt{QRUN} sky flats these residuals are much larger, nearly $\pm 1\%$ of the $K_s$-band sky brightness.
-In lower surface brightness regions of the disk (such as covered in the left-side detectors of Figs.~\ref{fig:frame_residuals_M31-37_Ks_fw100k_medsky} and~\ref{fig:frame_residuals_M31-37_Ks_QRUN}) the frame residuals consequent of \texttt{FW100K} and \text{QRUN} sky flats are typically within $\pm 0.2\%$ of the $K_s$ sky brightness.
+% In lower surface brightness regions of the disk (such as covered in the left-side detectors of Figs.~\ref{fig:frame_residuals_M31-37_Ks_fw100k_medsky} and~\ref{fig:frame_residuals_M31-37_Ks_QRUN}) the frame residuals consequent of \texttt{FW100K} and \text{QRUN} sky flats are typically within $\pm 0.2\%$ of the $K_s$ sky brightness; a similar magnitude as the shapes of median sky images.
 The time scale residual evolution clearly matches that of flat field evolution indicated in \Fig{fw100k_movie}.
 But despite limited accuracy, the \texttt{FW100K} sky flats do appear to track the real-time evolution of the WIRCam detector and produce more consistent frame shapes.
 Although all frames in \Fig{frame_residuals_M31-37_Ks_QRUN} are processed with the same \texttt{QRUN} sky flat, the intrinsic flat field function of WIRCam has evolved over the span of two hours to create frame-to-frame shape variations nearly $\pm 1\%$ of the $K_s$-band sky brightness at the center of M31.
+
+It is useful to contrast the frame shape residuals seen in detector \#2 to those in other detector's, where the disk surface brighness is lower.
+There, both \texttt{FW100K} (\Fig{frame_residuals_M31-37_Ks_fw100k_medsky}) and \texttt{QRUN} (\Fig{frame_residuals_M31-37_Ks_QRUN}) show similar residual distributions, on the order of $\lesssim 0.2$\% of the NIR sky brightness.
+Further, the results are not monotonically varying in time, as they are in detector \#2, and indeed appear to vary essentially randomly.
+We interpret this frame residual behaviour as being caused by random additive background processes, distinct from flat field biases that are proportional to surface brightness.
 
 \comment{Would it be better to actually plot an RMS map of pixels, rather than slices? Then it would be easier to plot RMS/intensity to plot flat fielding errors}.
 
@@ -1116,28 +1128,20 @@ Individual integrations are coloured by their time after the first disk integrat
 \subsubsection{Distributions of frame shape residuals}
 \label{sec:frameblockresidualhist}
 
-We also extend previous analysis analysis across the entire dataset.
-In \Fig{frame_residuals_M31-37_Ks_QRUN} we plot the distribution of frame-block residual shape amplitudes, measured at the 95\% difference interval.
+We also extend the previous analysis analysis across the entire dataset.
+In \Fig{frame_diffs_skyfrac} we plot the distribution of frame-block residual shape amplitudes, measured at the 95\% difference interval.
 In essence, this measures the consistency of imaging the shape of each M31 block.
 As in our test of median sky frame flatness (\Sec{medianskyshapes}), we see that the consistency of frame shapes is $\sim 0.3\%$ of the sky level.
-This result is seen for both \texttt{QRUN} and \texttt{FW100K} sky flat pipelines, and for 2007B and 2009B observing schemes.
-% TODO
-Is this indicative of limitations in flat field accuracy? in median sky accuracy? or in of real sky background fluctuations?
-Similarity of amplitudes to unflatness of median sky images indicates a similar process.
-In high-SB regions, the shape amplitude is $\sim 0.6\%$ of the sky (\eg \Fig{frame_residuals_m31-37_Ks_fw100k_medsky}), but in lower-SB regions the shape amplitude is $\sim 0.3\%$ of the sky level.
+This result is seen for both \texttt{QRUN} and \texttt{FW100K} sky flat pipelines and for 2007B and 2009B observing schemes, agreeing with our observation in \Sec{frameblockresiduals} that in background dominated regimes (as most of our blocks are) frame shape consistency is not correlated with flat field bias.
+Rather, we interpret \Fig{frame_diffs_skyfrac} as measuring the amplitudes of \emph{additive} stochastic background shapes originating either from the sky, or associated with the instrumentation itself.
+Effectively, \Fig{frame_diffs_skyfrac} illustrates the \emph{flatness limit} of WIRCam frames observed with large sky-target nods, sky flat fielding, and median sky subtraction.
 
-Conclusions:
-
-\begin{itemize}
-  \item Frame-by-frame background variability is $\sim 0.3\%$ of sky, seen both in residual differences between frames and blocks on the M31 disk, and in the shapes of sky background images.
-  \item No flat fielding technique, nor no observing method, can reliably decrease this variability. Thus it is \emph{impossible} for a WIRCam sky-target nodding program to control the shape of the sky background to better than $0.3\%$ of the sky background.
-  \item Field in flat field function increases frame shape variability to $\sim 0.6\%$ of sky.
-\end{itemize}
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/frame_residuals/framediffs_skyfrac}
-\caption{Distributions of scalar differences between individual frames and blocks in the $J$ (top) and $K_s$ (bottom) mosaics, measured as a dispersion of pixel differences at the 95\% level.
-This measurement is a dimensional reduction of the frame residual shape plots (\eg \Fig{frame_residuals_M31-37_Ks_QRUN}), representing the shape variability across $10\arcmin \times 10\arcmin$ WIRCam frames.
+\includegraphics[width=\columnwidth]{figs/frame_residuals/framediffs_skyfrac_cdf}
+\caption{Cumulative distributions of scalar difference amplitudes between individual frames and blocks in the $J$ (top) and $K_s$ (bottom) mosaics, measured as a dispersion of pixel differences at the 95\% level.
+Whether processed with \texttt{QRUN} (black) or \texttt{FW100k} (blue) sky flats, or observed in 2007B (solid lines) or 2009B (dotted lines), the residual amplitude differences between frames and blocks are similarly distributed.
+The expected amplitude difference is $0.3\%$ of the $J$ sky brightness ($0.2\%$ in $K_s$).
 }
 % Made with andpipe/wircam/shape/frame_block_residuals/plot_frame_residuals_hists.py
 \label{fig:frame_diffs_skyfrac}
@@ -1145,6 +1149,17 @@ This measurement is a dimensional reduction of the frame residual shape plots (\
 
 % \comment{Note that shape variability appears uncorrelated with sky level or time since sunset (unlike sky level; see \texttt{python andpipe/wircam/skyanalysis/shapevar\_correlations.py}.
 % There may be a correlation against airmass, but it is weak.}
+
+\subsection{Conclusions}
+\label{sec:shapeconclusions}
+
+We conclude this section by summarizing our findings on the accuracy of surface brightness shapes reproduced by WIRCam in a sky-target nodding observing program.
+
+\begin{enumerate}
+  \item We decompose surface perturbations into proportional processes (flat field biases) and additive processes (stochastic sky and instrumental backgrounds) by observing residual shapes of individual WIRCam frames again the median M31 mosaic in high and low surface brightness regimes; we find evidence for both processes occurring.
+  \item The WIRCam flat field function can vary by approximately 1\% across a frame in 1~hour. Building sky flats concurrently with observations is necessary to minimize systematic surface brightness bias. This, however, is only a concern in signal-dominated pixels (such as galaxy centres, or point sources); otherwise median sky subtract is effective at masking flat field bias to low-surface brightness features.
+  \item In low surface brightness regimes, we observe stochastic background variations of $\pm 0.2$\% of the sky amplitude. These background shapes cannot be removed with median sky frame subtraction (which itself has shape amplitudes on the order of $0.3\%$ of the NIR sky level. We find this to the the limiting surface brightness accuracy across a $10\arcmin \times 10\arcmin$ WIRCam frame.
+\end{enumerate}
 
 \section{Behaviour of the NIR Sky}
 \label{sec:skybehaviour}
